src/App.css
body,
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Clash Display', 'Times New Roman', Times, serif;
  font-weight: 100;
}

html {
  scroll-behavior: smooth;
}

:root {
  --primary: #FFFFE3;
  --secondary: #10100E;
}

body {
  width: 100vw;
  background-color: var(--secondary);
  overflow-x: hidden;
}

body::-webkit-scrollbar {
  display: none;
}

.main-app-container {
  position: relative;
}

.loading-wrapper {
  position: fixed;
  display: flex;
  z-index: 999;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
}

.loading-strip {
  width: 100%;
  height: 100%;
  background-color: var(--primary);
}

.loading-strip.mid {
  display: flex;
  align-items: center;
  justify-content: center;
}

.loading-text {
  font-size: 3em;
  font-weight: 100;
  opacity: 0;
  color: var(--secondary);
}

.cursor-wrapper {
  display: none;
}

.cursor-main,
.cursor-follow {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  pointer-events: none;
  mix-blend-mode: difference;
  transition: width, height 0.1s ease-in-out;
}

.cursor-dot {
  width: 4px;
  /* Adjust the size of the dot */
  height: 4px;
  background-color: var(--primary);
  /* Color of the main cursor dot */

}

.cursor-follow {
  border: 2px solid var(--primary);
  /* Customize the outline color here */
  transform: translate(-50%, -50%);
}

.navbar-wrapper {
  z-index: 998;
  position: fixed;
  left: 0;
  top: 0;
  padding: 0 10%;
  width: 100%;
  background-color: transparent;
  mix-blend-mode: difference;
}

.navbar-wrapper .row-w-padding {
  padding: 15px 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hamburger-bar {
  width: 24px;
  height: 1px;
  background-color: var(--primary);
  position: relative;
}

.hamburger-bar::before,
.hamburger-bar::after {
  content: '';
  position: absolute;
  height: 1px;
  background-color: var(--primary);
}

.hamburger-bar::before {
  width: 22px;
  top: -8px;
  right: 0;
}

.hamburger-bar::after {
  width: 27px;
  bottom: -8px;
  right: 0;
}

.navbar-wrapper .row-w-padding .links {
  display: none;
  gap: 60px;
  opacity: 70%;
}

.navbar-wrapper .row-w-padding .logo,
.navbar-wrapper .row-w-padding .links .link,
.navbar-wrapper .row-w-padding .links .toggle-theme {
  text-decoration: none;
  color: var(--primary);
}

.navbar-wrapper .row-w-padding .logo {
  font-size: 20px;
}

#hero-wrapper {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#hero-wrapper .hero-main-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: var(--primary);
  font-weight: 100;
}

.scroll-text {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  color: var(--primary);
  width: 90%;
  height: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 3;
}

.scroll-text .letter {
  font-size: 3em;
  font-weight: 100;
  opacity: 50%;
}

.spacer1 {
  height: 100px;
}

.spacer {
  height: 100vh;
}

.scroll-text h1 {
  opacity: 70%;
}

.hero-main-content {
  text-align: center;
}

.line {
  width: 0px;
  height: 1px;
  background-color: var(--primary);
}

#hero-wrapper .hero-main-content .main h2 span {
  font-weight: 500;
}

#hero-wrapper .hero-main-content .desc h2 {
  color: var(--secondary);
  background-color: var(--primary);
  padding: 4px 8px;
  font-weight: 300;
}

.pillar {
  z-index: 998;
  position: fixed;
  display: none;
  flex-direction: column;
  bottom: 0;
  justify-content: center;
  align-items: center;
  gap: 10px;
  mix-blend-mode: difference;
}

#left-pillar {
  margin-left: 10%;
}

#left-pillar img {
  height: 40px;
  opacity: 80%;
}

#right-pillar {
  right: 0;
  margin-right: 10%;
}

#right-pillar p {
  color: var(--primary);
  writing-mode: vertical-lr;
  font-size: 17px;
  letter-spacing: 4px;
  opacity: 80%;
}

.pillar .vertical-line {
  background-color: var(--primary);
  height: 150px;
  width: 1px;
  opacity: 50%;
}

.letter-spacer {
  width: 6px;
}

.test {
  background-color: var(--secondary);
  width: 100%;
  display: grid;
  place-items: center;
  z-index: 2;
  padding-top: 20px;
}

.desc {
  z-index: 1;
}

.main-letter-container {
  display: flex;
}

.main-letter.name {
  font-weight: 500;
}

.about-section-pin-wrapper {
  height: 110vh;
  width: 100vw;
  overflow: hidden;
}

.about-section-pin {
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  color: var(--primary);
  font-size: 3em;
  
}

.about-img {
  width: 250px;
  height: 150px;
  background-image: url("../public/assets/kio-img.png");
  background-size: 130%;
  background-position: center;
  transform: translate(20px, -17px);
}

.about-text[data-text="random"],
.about-text[data-text="mind"] {
  transform: translateX(-60px);
}

.about-text[data-text="words"] {
  transform: translateX(60px);
}

.about-section-story-wrapper {
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.about-section-story {
  width: 70%;
  height: 60vh;
  position: relative;
}

.about-section-story-shadow {
  width: 100%;
  height: 100%;
  background-color: var(--primary);
  opacity: 0.5;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.about-section-story-initial-load {
  width: 100%;
  height: 100%;
  background-color: var(--primary);
  position: absolute;
  top: 0;
  left: 0;
}

.about-section-story-main-title {
  margin: 0 auto;
  height: 20%;
  display: grid;
  place-items:end;
}

.about-section-story-main-content {
  padding: 0 10%;
  margin: 0 auto;
  font-size: 17px;
  height: 80%;
  opacity: 80%;
  font-weight: 100;
  display: grid;
  place-items: center;
}

.about-section-story-main-wrapper {
  width: 100%;
  height: 100%;
  background-color: var(--secondary);
  border: 1px solid var(--primary);
  /* position: absolute;
  top: 0;
  left: 0; */
  color: var(--primary);
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
  z-index: 2;
}

.experience-section-wrapper {
  position: relative;
  width: 100%;
  height: 100vh;
  background-color: var(--primary);
}

@media only screen and (min-width: 800px) {

  body,
  *,
  *::after,
  *::before {
    cursor: none;
  }

  .cursor-wrapper {
    display: unset;
  }

  .pillar {
    display: flex;
  }

  .navbar-wrapper .row-w-padding .logo h1 {
    font-size: 64px;
  }

  .navbar-wrapper .row-w-padding .links {
    display: flex;
    font-size: 25px;
    justify-content: center;
    align-items: center;
  }

  .navbar-wrapper .row-w-padding .hamburger-menu {
    display: none;
  }

  .about-section-pin-wrapper {
    height: 240vh;
  }

  .about-section-pin {
    height: 200vh;
  }

  .about-text {
    font-size: 3.5em;
  }

  .about-text[data-text="random"] {
    transform: translate(-120px, 30px);
  }

  .about-text[data-text="mind"] {
    transform: translate(-120px, -30px);
  }

  .about-text[data-text="words"] {
    transform: translateX(120px);
  }

  .about-img {
    width: 300px;
    height: 200px;
    transform: translate(80px, -120px);
  }

  .about-section-story-main-title {
    font-size: 32px;
  }
  
  .about-section-story-main-content {
    height: 50%;
    font-size: 30px;
    font-weight: 100;
  }
}

